# aishell

./: README.md  ai_shell.py  pyproject.toml
