[project]
name = "aishell"
version = "0.1.0"
description = "A smart shell that enhances command-line experience with intelligent command suggestions and history management."
authors = [
    { name = "ming" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "chromadb>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "sentence_transformers>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"